[style] adds space to bottom of wishlist to avoid overlap from footer

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -22,3 +22,7 @@
 .footer-container {
   bottom: 0;
 }
+
+.wishlist_footer_space {
+  height: 50px;
+}
